syntax = "proto3";

package dtako;

option go_package = "github.com/yhonda-ohishi/dtako_events/proto;dtako";

import "google/protobuf/timestamp.proto";

// DtakoEventサービス - イベントデータの管理
service DtakoEventService {
  // イベント基本操作
  rpc CreateEvent(CreateEventRequest) returns (Event);
  rpc GetEvent(GetEventRequest) returns (Event);
  rpc UpdateEvent(UpdateEventRequest) returns (Event);
  rpc DeleteEvent(DeleteEventRequest) returns (DeleteEventResponse);
  rpc ListEvents(ListEventsRequest) returns (ListEventsResponse);

  // 検索・フィルタリング
  rpc FindEmptyLocation(FindEmptyLocationRequest) returns (ListEventsResponse);
  rpc SearchByDateRange(DateRangeRequest) returns (ListEventsResponse);
  rpc SearchByDriver(DriverSearchRequest) returns (ListEventsResponse);

  // 位置情報処理
  rpc SetLocationByGeo(SetLocationRequest) returns (SetLocationResponse);
  rpc SetGeoCode(SetGeoCodeRequest) returns (SetGeoCodeResponse);
}

// イベント（dtako_rows.protoのEventと同じ定義を参照）
message Event {
  string srch_id = 1;
  string event_type = 2;
  string unko_no = 3;
  string driver_id = 4;
  google.protobuf.Timestamp start_datetime = 5;
  google.protobuf.Timestamp end_datetime = 6;
  double start_latitude = 7;
  double start_longitude = 8;
  string start_city_name = 9;
  double end_latitude = 10;
  double end_longitude = 11;
  string end_city_name = 12;
  string tokuisaki = 13;
  string biko = 14;
  google.protobuf.Timestamp created_at = 20;
  google.protobuf.Timestamp updated_at = 21;
}

message CreateEventRequest {
  Event event = 1;
}

message GetEventRequest {
  string srch_id = 1;
}

message UpdateEventRequest {
  Event event = 1;
}

message DeleteEventRequest {
  string srch_id = 1;
}

message DeleteEventResponse {
  bool success = 1;
}

message ListEventsRequest {
  int32 page = 1;
  int32 page_size = 2;
  string filter = 3;
}

message ListEventsResponse {
  repeated Event events = 1;
  int32 total = 2;
}

// 空の位置情報を持つイベント検索
message FindEmptyLocationRequest {
  google.protobuf.Timestamp since = 1;  // この日時以降
}

// 日付範囲検索
message DateRangeRequest {
  google.protobuf.Timestamp date_from = 1;
  google.protobuf.Timestamp date_to = 2;
}

// 運転手検索
message DriverSearchRequest {
  string driver_id = 1;
  google.protobuf.Timestamp date_from = 2;
  google.protobuf.Timestamp date_to = 3;
}

// 位置情報設定
message SetLocationRequest {
  string srch_id = 1;
}

message SetLocationResponse {
  bool success = 1;
  string message = 2;
}

// ジオコーディング
message SetGeoCodeRequest {
  repeated string srch_ids = 1;
}

message SetGeoCodeResponse {
  int32 updated_count = 1;
  repeated string errors = 2;
}